<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|bottom"
    android:columnCount="4"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text"
        android:layout_columnSpan="4"
        android:layout_columnWeight="1"
        android:textSize="@dimen/CalcButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonC"
        android:text="@string/c"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDel"
        android:text="@string/del"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPercent"
        android:text="@string/percent"


        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDivide"
        android:text="@string/divide"


        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        style="@style/button"
        android:text="@string/_7"


        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        style="@style/button"
        android:text="@string/_8"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        style="@style/button"
        android:text="@string/_9"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiplication"
        android:text="@string/multiplication"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/button_4"
        style="@style/button"
        android:text="@string/_4"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/button_5"
        style="@style/button"
        android:text="@string/_5"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/button_6"
        style="@style/button"
        android:text="@string/_6"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonMinus"
        android:text="@string/minus"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/button_1"
        style="@style/button"
        android:text="@string/_1"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/button_2"
        style="@style/button"
        android:text="@string/_2"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/button_3"
        style="@style/button"
        android:text="@string/_3"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonPlus"
        android:text="@string/plus"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonTheme"
        style="@style/themeButton"
        android:text="Theme"

        />
    <com.google.android.material.button.MaterialButton

        android:id="@+id/button_0"
        style="@style/button"
        android:text="@string/_0"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonPoint"
        style="@style/button"
        android:text="@string/Point"

        />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonEquals"
        style="@style/equalsButton"
        android:layout_column="3"
        android:text="@string/Equals"

        />


</GridLayout>


